--- a/Programmers/Lv.1/신고_결과_받기.md
+++ b/Programmers/Lv.1/신고_결과_받기.md
@@ -3,6 +3,8 @@
 - [신고 결과 받기](https://school.programmers.co.kr/learn/courses/30/lessons/92334)
 - 신고 목록을 바탕으로 각각의 이용자가 신고한 이용자 중에 정지된 이용자의 수를 구하는 문제. 
 
+<br/>
+
 ### 💡 Facts
 #### Inputs
 - 이용자들의 목록 `id_list`가 주어진다.
@@ -12,6 +14,7 @@
 - 각 이용자들이 신고한 이용자 중에 정지된 이용자의 수를 배열에 담아 반환.
 #### Notes
 - A 이용자가 B 이용자를 여러번 신고해도 1번의 신고로 처리된다.
+<br/>
 
 ### 🚎 Approach
 - 각 이용자마다 내가 신고한 이용자들과, 나를 신고한 이용자들을 Set에 저장한다.
@@ -19,10 +22,13 @@
 - 이용자가 신고될 때마다 신고 받는 횟수가 정지되기 위한 기준치를 넘는지 확인해서 넘을 경우 정지된 이용자들을 Set에 따로 저장한다. 
 - 마지막으로 각 이용자들이 신고한 이용자들중에 정지된 이용자들이 몇인지 계산해서 배열에 담는다
 - 각 이용자가 받을 처리 결과 메일 횟수(신고한 이용자중에 정지된 이용자의 수)를 담은 배열을 반환한다. 
+<br/>
+
 ### 🧭 Complexity
 
 - Space Complexity : O(N)
 - Time Complexity : O(N^2)
+<br/>
 
 ### 📝 Source Code
 
@@ -65,5 +71,37 @@ function solution(id_list, report, k) {
     return resultMailCount;
 }
 ```
+<br/>
 
+
+### 🧐 Thins I Learned From Other solutions
+<details>
+<summary>시작할 때 Report를 Set에 담아 중복된 신고를 미리 제외하기</summary>
+<div markdown="1">
+    
+```javascript
+    const reports = [new Set(report)];
+```
+</div>
+</details>
+<br/>
+<details>
+<summary>Object vs Map</summary>
+<div markdown="1">
+    
+`MAP`  
+- data structure which helps in `storing the data` in the `form of pairs`  
+- the pair consists of a unique key and a value mapped to the key  
+- helps `prevent duplicity`  
+    
+`OBJECT`
+- uses `key-value pair` for storing data as `MAP`  
+    
+`DIFFERENCES`
+- In Object, the data-type of the key-field is restricted to integer, strings, and symbols.  
+    Whereas in Map, the key-field can be of `any data-type` (integer, an array, even an object)  
+- In the Map, the original `order of elements is preserved`. This is not true in case of objects.  
+- The Map is an instance of an object but the vice-versa is not true.  
+</div>
+</details>
 
